--- a/views/register.ejs
+++ b/views/register.ejs
@@ -216,6 +216,47 @@ button[id="register"]:hover {
     transition-duration: 0.4s;
     border:0cm
 }
+
+::-webkit-input-placeholder {
+    text-align: center;
+  }
+  
+  :-moz-placeholder {
+    text-align: center;
+  }
+  :-ms-input-placeholder {  
+    text-align: center; 
+ }
+
+ @media only screen and (max-width: 768px) {
+    h1 {
+        bottom: 55%;
+    }
+    .subtitle {
+        bottom: 45%;
+    }
+    label[for="name"] { 
+        bottom: 30%;
+    }
+    input[id="name"] {
+        bottom: 20%;
+    }
+    label[for="email"] { 
+        bottom: 5%;
+    }
+    input[id="email"] {
+        bottom: -3%;
+    }
+    label[for="password"] { 
+        bottom: -20%;
+    }
+    input[id="password"] {
+        bottom: -27%;
+    }
+    button[id="register"] {
+        bottom: -45%;
+    }
+ }
     </style>
     <h1>DaneeCloud</h1>
     <h2 class="subtitle">Register</h2>
