--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,27 +23,61 @@
     display: flex;
     flex-direction: column;
 }
+.logout {
+    color: white;
+    height: 60px;
+    width: 125px;
+    background-color: #5D3FD3;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 5px;
+    margin-top: 5px;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 24px;
+    transition-duration: 0.4s;
+    border:0cm
+}
 
+.logout:hover {
+    color: #5D3FD3;
+    height: 60px;
+    width: 125px;
+    background-color: white;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 5px;
+    margin-top: 5px;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 24px;
+    transition-duration: 0.4s;
+    border:0cm
+}
 
 label[for="file"] {
     color: white;
     height: 60px;
     width: 250px;
     background-color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 30%;
-    left: 0;
-    right: 0;
     font-size: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
     transition-duration: 0.4s;
+    border:0cm
 }
 
 label[for="file"]:hover {
@@ -51,20 +85,18 @@ label[for="file"]:hover {
     height: 60px;
     width: 250px;
     background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 30%;
-    left: 0;
-    right: 0;
     font-size: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
     transition-duration: 0.4s;
+    border:0cm
 }
 
 .upload {
@@ -72,16 +104,13 @@ label[for="file"]:hover {
     height: 60px;
     width: 250px;
     background-color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 20%;
-    left: 0;
-    right: 0;
     font-size: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -94,16 +123,13 @@ label[for="file"]:hover {
     height: 60px;
     width: 250px;
     background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 20%;
-    left: 0;
-    right: 0;
     font-size: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -113,15 +139,8 @@ label[for="file"]:hover {
 
 h1 {
     color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    display: flex;
-    left: 0;
-    right: 0;
-    bottom: 45%;
-    top: 0;
-    justify-content: center;
-    align-items: center;
+    margin-top: 10%;
+    text-align: center;
     font-family: "Montserrat", sans-serif;
     font-size: xxx-large;
 
@@ -129,15 +148,8 @@ h1 {
 
 .subtitle {
     color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    display: flex;
-    left: 0;
-    right: 0;
-    bottom: 40%;
-    top: 0;
-    justify-content: center;
-    align-items: center;
+    margin-top: -5px;
+    text-align: center;
     font-family: "Montserrat", sans-serif;
     font-size: x-large;
 }
@@ -146,16 +158,13 @@ h1 {
     height: 60px;
     width: 250px;
     background-color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0%;
-    left: 0;
-    right: 0;
     font-size: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -163,20 +172,17 @@ h1 {
     border:0cm
 }
 .download:hover {
-color: #5D3FD3;
+    color: #5D3FD3;
     height: 60px;
     width: 250px;
     background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0%;
-    left: 0;
-    right: 0;
     font-size: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -198,20 +204,15 @@ color: #5D3FD3;
         }
 
 input[type="text"] {
-    color: black;
     height: 60px;
     width: 250px;
     background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 10%;
-    left: 0;
-    right: 0;
     font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -219,45 +220,7 @@ input[type="text"] {
     border:0cm
 }
 
-.logout {
-    color: white;
-    height: 60px;
-    width: 125px;
-    background-color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    top: 1%;
-    right: 1%;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
 
-.logout:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 125px;
-    background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 1%;
-    right: 1%;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
 
 ::-webkit-input-placeholder {
     text-align: center;
@@ -270,37 +233,11 @@ input[type="text"] {
     text-align: center; 
  }
 
- @media only screen and (max-width: 768px) {
-    h1 {
-        bottom: 55%;
-    }
-    .subtitle {
-        bottom: 45%;
-    }
-    label { 
-        bottom: 33%;
-    }
-    label:hover {
-        bottom: 33%;
-    }
-    .upload {
-        bottom: 15%;
-    }
-    .upload:hover {
-        bottom: 15%;
-    }
-    input[type="text"] {
-        bottom: -3%;
-    }
-    .download {
-        bottom: -21%;
-    }
-    .download:hover {
-        bottom: -21%;
-    }
-  }
     </style>
     <div class="phone">
+        <form action="/logout?_method=DELETE" method="POST">
+            <button type="submit" class="logout">Log Out</button>
+        </form>
     <h1>DaneeCloud</h1>
     <h2 class="subtitle">Upload & Download your files!</h2>
     <form action="/upload/" method="post", enctype="multipart/form-data">
@@ -312,8 +249,8 @@ input[type="text"] {
         <input type="text", id="downloadfile", name="downloadfile" placeholder="Your file name" required></input>
         <button type="submit" class="download"><span class="material-icons">cloud_download</span>&nbsp;Download</button>
     </form>
-    <form action="/logout?_method=DELETE" method="POST">
-        <button type="submit" class="logout">Log Out</button>
+    <form action="/myfiles", method="get">
+        
     </form>
     <footer>
         <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
