--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,15 +25,8 @@
 
 h1 {
     color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    display: flex;
-    left: 0;
-    right: 0;
-    bottom: 45%;
-    top: 0;
-    justify-content: center;
-    align-items: center;
+    margin-top: 10%;
+    text-align: center;
     font-family: "Montserrat", sans-serif;
     font-size: xxx-large;
 
@@ -41,15 +34,8 @@ h1 {
 
 .subtitle {
     color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    display: flex;
-    left: 0;
-    right: 0;
-    bottom: 40%;
-    top: 0;
-    justify-content: center;
-    align-items: center;
+    margin-top: -5px;
+    text-align: center;
     font-family: "Montserrat", sans-serif;
     font-size: x-large;
 }
@@ -69,33 +55,25 @@ h1 {
 
 label[for="name"] {
     color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 30%;
-    left: 0;
-    right: 0;
-    font-size: 20px;
+    margin-top: 5px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
     display: flex;
     justify-content: center;
-    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
+
 }
+
 input[id="name"] {
     height: 60px;
     width: 250px;
     background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 25%;
-    left: 0;
-    right: 0;
     font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -104,33 +82,23 @@ input[id="name"] {
 }
 label[for="email"] {
     color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 15%;
-    left: 0;
-    right: 0;
-    font-size: 20px;
+    margin-top: 5px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
     display: flex;
     justify-content: center;
-    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
 }
 input[id="email"] {
     height: 60px;
     width: 250px;
     background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 10%;
-    left: 0;
-    right: 0;
     font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -139,33 +107,23 @@ input[id="email"] {
 }
 label[for="password"] {
     color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: 0%;
-    left: 0;
-    right: 0;
-    font-size: 20px;
+    margin-top: 5px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
     display: flex;
     justify-content: center;
-    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
 }
 input[id="password"] {
     height: 60px;
     width: 250px;
     background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: -5%;
-    left: 0;
-    right: 0;
     font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    text-align: center;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -178,16 +136,13 @@ button[id="register"] {
     height: 60px;
     width: 250px;
     background-color: #5D3FD3;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: -15%;
-    left: 0;
-    right: 0;
     font-size: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -200,16 +155,13 @@ button[id="register"]:hover {
     height: 60px;
     width: 250px;
     background-color: white;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    bottom: -15%;
-    left: 0;
-    right: 0;
     font-size: 20px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     font-family: "Montserrat", sans-serif;
     border-radius: 24px;
@@ -228,35 +180,8 @@ button[id="register"]:hover {
     text-align: center; 
  }
 
- @media only screen and (max-width: 768px) {
-    h1 {
-        bottom: 55%;
-    }
-    .subtitle {
-        bottom: 45%;
-    }
-    label[for="name"] { 
-        bottom: 30%;
-    }
-    input[id="name"] {
-        bottom: 20%;
-    }
-    label[for="email"] { 
-        bottom: 5%;
-    }
-    input[id="email"] {
-        bottom: -3%;
-    }
-    label[for="password"] { 
-        bottom: -20%;
-    }
-    input[id="password"] {
-        bottom: -27%;
-    }
-    button[id="register"] {
-        bottom: -45%;
-    }
- }
+
+
     </style>
     <h1>DaneeCloud</h1>
     <h2 class="subtitle">Register</h2>
