--- a/views/message.ejs
+++ b/views/message.ejs
@@ -20,45 +20,26 @@
 
         
         h1 {
-            color: #5D3FD3;
-            position: absolute;
-            margin: auto;
-            display: flex;
-            left: 0;
-            right: 0;
-            bottom: 45%;
-            top: 0;
-            justify-content: center;
-            align-items: center;
-            font-family: "Montserrat", sans-serif;
-            font-size: xxx-large;
-        
-        }
+    color: #5D3FD3;
+    margin-top: 10%;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: xxx-large;
+
+}
         h2 {
             color: #5D3FD3;
-            position: absolute;
-            margin: auto;
-            display: flex;
-            left: 0;
-            right: 0;
-            bottom: 40%;
-            top: 0;
-            justify-content: center;
-            align-items: center;
-            font-family: "Montserrat", sans-serif;
-            font-size: x-large;
+    margin-top: -5px;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: x-large;
         
         }
       
       h3 {
-          color: #5D3FD3;
-          position: absolute;
-          margin: auto;
+          color: #5D3FD3;;
           display: flex;
-          left: 0;
-          right: 0;
-          bottom: 30%;
-          top: 0;
+          margin-top: 20px;
           justify-content: center;
           align-items: center;
           font-family: "Montserrat", sans-serif;
@@ -67,46 +48,40 @@
       }
       input[type="submit"] {
         color: white;
-        height: 60px;
-        width: 250px;
-        background-color: #5D3FD3;
-        position: absolute;
-        margin: auto;
-        top: 0;
-        bottom: 20%;
-        left: 0;
-        right: 0;
-        font-size: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        font-family: "Montserrat", sans-serif;
-        border-radius: 24px;
-        transition-duration: 0.4s;
-        border:0cm
+    height: 60px;
+    width: 250px;
+    background-color: #5D3FD3;
+    font-size: 20px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 24px;
+    transition-duration: 0.4s;
+    border:0cm
     }
     
     input[type="submit"]:hover {
         color: #5D3FD3;
-        height: 60px;
-        width: 250px;
-        background-color: white;
-        position: absolute;
-        margin: auto;
-        top: 0;
-        bottom: 20%;
-        left: 0;
-        right: 0;
-        font-size: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        font-family: "Montserrat", sans-serif;
-        border-radius: 24px;
-        transition-duration: 0.4s;
-        border:0cm
+    height: 60px;
+    width: 250px;
+    background-color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 24px;
+    transition-duration: 0.4s;
+    border:0cm
     }
     .footer {
       position: fixed;
@@ -130,36 +105,6 @@
   }
   :-ms-input-placeholder {  
     text-align: center; 
- }
-
- @media only screen and (max-width: 768px) {
-    h1 {
-        bottom: 55%;
-    }
-    .subtitle {
-        bottom: 45%;
-    }
-    label { 
-        bottom: 33%;
-    }
-    label:hover {
-        bottom: 33%;
-    }
-    .upload {
-        bottom: 15%;
-    }
-    .upload:hover {
-        bottom: 15%;
-    }
-    input[type="text"] {
-        bottom: -3%;
-    }
-    .download {
-        bottom: -21%;
-    }
-    .download:hover {
-        bottom: -21%;
-    }
  }
 
         </style>
